--- a/第一章/代码1-4 OpenLayres初始化地图.html
+++ b/第一章/代码1-4 OpenLayres初始化地图.html
@@ -7,6 +7,15 @@
   <link rel="stylesheet" href="https://openlayers.org/en/v4.6.5/css/ol.css" type="text/css">
   <script src="https://openlayers.org/en/v4.6.5/build/ol.js"></script>
   <style>
+    /* .fullscreen {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100vh;
+      /* 关键：使用视口高度 */
+    /* } */
+
     .map {
       width: 100%;
       height: 100%;
@@ -15,18 +24,19 @@
 </head>
 
 <body>
-  <div id="fullscreen" class="fullscreen">
-    <div id="map" class="map"></div>
-  </div>
+  <div id="map" class="map"></div>
   <script>
-    let view = new ol.View({
-      center: [-27134284.06636128, 4846385.604799764],
-      zoom: 8
+    var view = new ol.View({
+      center: ol.proj.fromLonLat([116.3974, 39.9093]), // 北京经纬度（转换为EPSG:3857）
+      zoom: 10
     });
-    let map = new ol.Map({
+    var map = new ol.Map({
       layers: [
         new ol.layer.Tile({
-          source: new ol.source.OSM()
+          source: new ol.source.XYZ({
+            // 使用XYZ格式的瓦片服务源，适用于标准的瓦片地图服务（TMS）
+            url: 'https://webrd0{1-4}.is.autonavi.com/appmaptile?style=8&x={x}&y={y}&z={z}&lang=zh_cn&size=1&scale=1'
+          }),
         })
       ],
       target: 'map',
